--- a/templates/index.html
+++ b/templates/index.html
@@ -50,11 +50,10 @@
             <span class>{{item.description}}</span>
 
             {% if item.isCompleted %}
-            <a class="ui green left corner label" href="/update/{{loop.index0}}"><i
+            <a class="ui green left corner label" href="/update/{{item.id}}"><i
                     class="check square outline icon"></i></a>
             {% else %}
-            <a class="ui red left corner label" href="/update/{{loop.index0}}"><i
-                    class="square outline icon icon"></i></a>
+            <a class="ui red left corner label" href="/update/{{item.id}}"><i class="square outline icon icon"></i></a>
             {% endif %}
         </div>
         {% endfor %}
